1.9.0
-------
- Rename exception to have Error suffix
- Add `SubAnalysis.from_analysis_id` to properly initialize SubAnalysis without the composed analysis
- Fix URL analysis additional parameters propagation

1.8.3
-------
- add extraction info to sub analysis

1.8.1
-------
- Add space in note title

1.8.0
-------
- Add on-premise compatability
- Deprecate `get_analysis_by_id` in favor of `Analysis.from_analysis_id`


1.7.0
-------
- Add UrlAnalysis
- `Analysis` was renamed to `FileAnalysis`
- Drop support for python 3.5, add support for python 3.10

1.6.4 - 1.6.10
-------
- Analysis summary utility improvements

1.6.3
-------
- Fix: analysis summary didn't handle no code reuse report

1.6.2
-------
- Fix: analysis summary didn't look for genes in root analysis


1.6.1
-------
- Fix: Handle no iocs correctly

1.6
------
- Add analysis summary utility function
- Handle no ttps correctly

1.5
------
- Add family search
- Support for zip password
- Add iocs and dynamic ttps to analysis
- Add capabilities to sub analysis

1.4.5.2
------
- Fixes for get_analysis_by_id function

1.4.5
------
- Add a timeout option when waiting for operation completion

1.4
------
- Add support for strings api calls

1.3
------
- Add all sub-analyses api calls: code reuse, metadata, account related samples and find related samples
- Add download

1.2
------
- Add option to specify wait interval
- Errors are more informative now

1.1.1
------
 - Add support for python 3.8
 - Retry https connection errors

1.1
------
 - In Analysis: Refresh JWT access token in case of expiration

1.0
------
 - In Analysis: Change dynamic_unpacking and static_unpacking to disable_dynamic_unpacking and disable_static_unpacking